# phonoscape

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-publish.yml
baseline/: ApplyLabels.m  ApplyPraatLabs.m  CenteredDialog.m  CombineVars.m  DelimitGest.m  ExtractTraj.m  PlotMviewVar.m  cog.m  lp_PhaseAng.m  lp_exportvals.m  lp_extents.m  lp_findgest.m  lp_peaks.m  lp_snapex.m  lp_template.m  mat2wav.m  mdp_AZEL.m  mdp_AggVel.m  mdp_EstTV.m  mdp_F0.m  mdp_F0_jason.m  mdp_FAlabels.m  mdp_JawAngle.m  mdp_LipAperture.m  mdp_PCA.m  mdp_PalDist.m  mdp_SubtractJaw.m  mdp_TongArea.m  mdp_TongVel.m  mdp_flip.m  mdp_formants.m  mdp_traj.m  mdp_vel.m  melba.m  mview.m  pp_movie.m  pp_phase.m  pp_template.m  spectra.m
design/: mview-analysis.md  pyview-design.md  tech-stack.md  todo.md  work-plan.md
phonoscape/: __init__.py  __main__.py  state.py  window.py
phonoscape-fe-js/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
phonoscape-fe-js/src/: main.tsx
phonoscape/data/: parse.py
phonoscape/dproc/: protocol.py
phonoscape/lproc/: lp_default.py  lp_export_vals.py  lp_extents.py  lp_find_gest.py  lp_peaks.py  lp_phase_ang.py  lp_snap_ex.py
phonoscape/menu/: menu_bar.py
phonoscape/modals/: edit_labels_modal.py  label_modal.py
phonoscape/pproc/: protocol.py
phonoscape/views/: spatial_view_2d.py
phonoscape/widgets/: play_button.py  readout.py
pyview/: __init__.py  __main__.py  data.py  state.py  window.py
pyview-fe-js/: eslint.config.ts  index.html  package.json  tsconfig.json
schemas/: protocol.json
(+38 files in other folders)
