[project]
name = "pyview"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136",
    "matplotlib>=3.10.9",
    "numpy>=2.4",
    "pydantic>=2.13",
    "scipy>=1.17",
    "sounddevice>=0.5.5",
    "uvicorn[standard]>=0.47",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
]

[tool.black]
target-version = ["py314"]
