[project]
name = "phonoscape"
version = "0.1.3"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "amfm-decompy>=1.0.12.2",
    "fastapi>=0.136",
    "matplotlib>=3.10.9",
    "numpy>=2.4",
    "pydantic>=2.13",
    "pyside6>=6.11.1",
    "scipy>=1.17",
    "sounddevice>=0.5.5",
    "uvicorn[standard]>=0.47",
]

[project.scripts]
phonoscape = "phonoscape.__main__:main"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "build>=1.5.0",
    "twine>=6.2.0",
]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["phonoscape*"]
exclude = ["baseline*", "phonoscape-fe-js*", "test_data*"]

[tool.black]
target-version = ["py314"]
